# litewallet

./: README.md  run-client.sh  run-server.sh
client/: Cargo.toml  Trunk.toml  index.html  style.css  zsh.exe.stackdump
client/src/: components.rs  consts.rs  counter.rs  input.rs  layouts.rs  lib.rs  main.rs  models.rs
client/src/components/: footer.rs  modal.rs  navigation.rs
client/src/pages/: main.rs
client/style/: output.css
server/: Cargo.toml  app.db
server/migrations/2023-05-23-201507_create_users/: up.sql
server/migrations/2023-05-25-175001_add_sessions_table/: up.sql
server/migrations/2023-05-26-093157_add_accounts_table/: up.sql
server/migrations/2023-05-26-131630_add_actions_table/: up.sql
server/src/: main.rs  schema.rs  utils.rs
server/src/common/: db.rs  models.rs
server/src/routes/: accounts.rs  auth.rs
server/src/services/: account.rs  mod.rs  transfer.rs  user.rs
server/src/utils/: generate_acc_num.rs  left_pad.rs
