[package]
name = "litewallet-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
leptos = "0.3.0"
leptos_router = { version = "0.3.0", features = ["csr" ] }
reqwasm = "0.5.0"
serde = {version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.87"

