[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
diesel = { version = "2.0.4", features = ["sqlite"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
nanoid = "0.4.0"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "json"] }
rocket_cors = "0.5.2"
sha256 = "1.1.3"
